POM fix for release management

--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,6 @@
                     </args>
                     <compilerPlugins>
                         <plugin>spring</plugin>
-                        <plugin>jpa</plugin>
                     </compilerPlugins>
                 </configuration>
                 <dependencies>
@@ -121,5 +120,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>github</name>
+            <url>https://maven.pkg.github.com/droberts-abacussystems/spring-boot-jwt-custom</url>
+        </repository>
+    </distributionManagement>
 
 </project>
